Nested property map now creates a tree to avoid multiple copies to same objects

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 .vs*/
-/artifacts/
+
 .bonsai/Packages/
 .bonsai/*.exe
 .bonsai/*.exe.settings
 .bonsai/*.exe.WebView2/
+
+**/artifacts/
+**/.bonsai/Packages/
+**/.bonsai/*.exe
+**/.bonsai/*.exe.settings
+**/.bonsai/*.exe.WebView2/
 *.user
